--- a/pom.xml
+++ b/pom.xml
@@ -54,4 +54,12 @@
             <url>http://repo.jenkins-ci.org/public/</url>
         </pluginRepository>
     </pluginRepositories>
+	<dependencies>
+		<dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>4.12</version>
+                <scope>test</scope>
+		</dependency>
+	</dependencies>
 </project>
