--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,9 @@
         <artifactId>plugin</artifactId>
         <version>4.12</version>
     </parent>
+    <groupId>io.jenkins.plugins</groupId>
     <artifactId>chartjs</artifactId>
-    <version>0.1-SNAPSHOT</version>
+    <version>1.0-SNAPSHOT</version>
     <packaging>hpi</packaging>
     <name>Jenkins Chart.js plugin</name>
     <properties>
@@ -19,7 +20,6 @@
     <developers>
         <developer>
             <id>judovana</id>
-            <name>Stanislav Baiduzhyi</name>
             <email>judovana@gmail.com</email>
         </developer>
     </developers>
