--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <artifactId>chartjs</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>hpi</packaging>
-    <name>Jenkins Chart.js plugin</name>
+    <name>shared library of Chart.js plugin</name>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jenkins.version>2.361.4</jenkins.version>
