--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <groupId>io.jenkins.plugins</groupId>
     <artifactId>chartjs-api</artifactId>
     <!-- versioning of chartjs plugin is following the chartjs versioning-->
-    <version>1.0.2.1-SNAPSHOT</version>
+    <version>1.0.2.1</version>
     <packaging>hpi</packaging>
     <name>Chart.js API</name>
     <properties>
