--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <groupId>io.jenkins.plugins</groupId>
     <artifactId>chartjs-api</artifactId>
     <!-- versioning of chartjs plugin is following the chartjs versioning-->
-    <version>4.2.1.1</version>
+    <version>4.2.1.2</version>
     <packaging>hpi</packaging>
     <name>Chart.js API</name>
     <properties>
@@ -69,23 +69,31 @@
 <build>
   <plugins>
     <plugin>
-      <groupId>com.googlecode.maven-download-plugin</groupId>
-      <artifactId>download-maven-plugin</artifactId>
-      <version>1.6.8</version>
+      <groupId>com.github.eirslett</groupId>
+      <artifactId>frontend-maven-plugin</artifactId>
+      <version>1.12.1</version>
       <executions>
         <execution>
-         <id>install-chartjs</id>
-         <phase>generate-sources</phase>
-         <goals>
-          <goal>wget</goal>
-         </goals>
+          <id>install node and npm</id>
+          <goals>
+            <goal>install-node-and-npm</goal>
+          </goals>
+          <phase>generate-resources</phase>
+          <configuration>
+            <nodeVersion>v18.15.0</nodeVersion>
+          </configuration>
         </execution>
-       </executions>
-       <configuration>
-        <url>https://github.com/chartjs/Chart.js/releases/download/v${chartjs.version}/chart.js-${chartjs.version}.tgz</url>
-        <unpack>true</unpack>
-        <outputDirectory>${project.build.directory}/chartjs-${chartjs.version}</outputDirectory>
-       </configuration>
+        <execution>
+          <id>npm install</id>
+          <goals>
+            <goal>npm</goal>
+          </goals>
+          <phase>generate-resources</phase>
+          <configuration>
+            <arguments>install</arguments>
+          </configuration>
+        </execution>
+      </executions>
     </plugin>
     <plugin>
       <groupId>org.apache.maven.plugins</groupId>
@@ -93,7 +101,7 @@
       <executions>
         <execution>
           <id>copy-resources</id>
-          <phase>generate-sources</phase>
+          <phase>generate-resources</phase>
           <goals>
             <goal>copy-resources</goal>
           </goals>
@@ -101,7 +109,7 @@
             <outputDirectory>${project.build.directory}/${project.artifactId}</outputDirectory>
             <resources>
               <resource>
-                <directory>${project.build.directory}/chartjs-${chartjs.version}/package/dist</directory>
+                  <directory>${project.basedir}/node_modules/chart.js/dist</directory>
                   <includes>
                     <include>chart.js</include>
                   </includes>
