--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,7 @@
                   <directory>${project.basedir}/node_modules/chart.js/dist</directory>
                   <includes>
                     <include>chart.umd.js</include>
+                    <include>chart.umd.js.map</include>
                   </includes>
               </resource>
             </resources>
