--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,3 +10,7 @@ updates:
   directory: /
   schedule:
     interval: monthly
+- package-ecosystem: npm
+  directory: /
+  schedule:
+    interval: monthly
