--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <groupId>io.jenkins.plugins</groupId>
     <artifactId>chartjs-api</artifactId>
     <!-- versioning of chartjs plugin is following the chartjs versioning-->
-    <version>4.2.1.4</version>
+    <version>4.2.1.5-SNAPSHOT</version>
     <packaging>hpi</packaging>
     <name>Chart.js API</name>
     <properties>
