--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,13 @@
     <groupId>io.jenkins.plugins</groupId>
     <artifactId>chartjs-api</artifactId>
     <!-- versioning of chartjs plugin is following the chartjs versioning-->
-    <version>4.2.1.5-SNAPSHOT</version>
+    <version>${revision}${changelist}</version>
     <packaging>hpi</packaging>
     <name>Chart.js API</name>
     <properties>
+        <revision>4.2.1.5</revision>
+        <changelist>-SNAPSHOT</changelist>
+        <gitHubRepo>jenkinsci/chartjs-api-plugin</gitHubRepo>
         <chartjs.version>4.2.1</chartjs.version>
         <jenkins.version>2.361.4</jenkins.version>
         <!-- those twoo should be aligned -->
@@ -36,10 +39,10 @@
 
     <url>https://github.com/jenkinsci/${project.artifactId}-plugin</url>
     <scm>
-        <connection>scm:git:https://github.com/jenkinsci/${project.artifactId}-plugin.git</connection>
-        <developerConnection>scm:git:git@github.com:jenkinsci/${project.artifactId}-plugin.git</developerConnection>
-        <url>https://github.com/jenkinsci/${project.artifactId}-plugin</url>
-        <tag>HEAD</tag>
+        <connection>scm:git:https://github.com/${gitHubRepo}.git</connection>
+        <developerConnection>scm:git:git@github.com:${gitHubRepo}.git</developerConnection>
+        <url>https://github.com/${gitHubRepo}</url>
+        <tag>${scmTag}</tag>
     </scm>
 
     <repositories>
