--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <groupId>io.jenkins.plugins</groupId>
     <artifactId>chartjs-api</artifactId>
     <!-- versioning of chartjs plugin is following the chartjs versioning-->
-    <version>${revision}${changelist}</version>
+    <version>1.0.2.6</version>
     <packaging>hpi</packaging>
     <name>Chart.js API</name>
     <properties>
@@ -42,7 +42,7 @@
         <connection>scm:git:https://github.com/${gitHubRepo}.git</connection>
         <developerConnection>scm:git:git@github.com:${gitHubRepo}.git</developerConnection>
         <url>https://github.com/${gitHubRepo}</url>
-        <tag>${scmTag}</tag>
+        <tag>chartjs-api-1.0.2.6</tag>
     </scm>
 
     <repositories>
