--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,11 @@
     <groupId>io.jenkins.plugins</groupId>
     <artifactId>chartjs-api</artifactId>
     <!-- versioning of chartjs plugin is following the chartjs versioning-->
-    <version>1.0.2.6</version>
+    <version>${revision}${changelist}</version>
     <packaging>hpi</packaging>
     <name>Chart.js API</name>
     <properties>
-        <revision>1.0.2.6</revision>
+        <revision>1.0.2.7</revision>
         <changelist>-SNAPSHOT</changelist>
         <gitHubRepo>jenkinsci/chartjs-api-plugin</gitHubRepo>
         <chartjs.version>1.0.2</chartjs.version>
@@ -42,7 +42,7 @@
         <connection>scm:git:https://github.com/${gitHubRepo}.git</connection>
         <developerConnection>scm:git:git@github.com:${gitHubRepo}.git</developerConnection>
         <url>https://github.com/${gitHubRepo}</url>
-        <tag>chartjs-api-1.0.2.6</tag>
+        <tag>${scmTag}</tag>
     </scm>
 
     <repositories>
