--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,9 @@
         <changelist>-SNAPSHOT</changelist>
         <gitHubRepo>jenkinsci/chartjs-api-plugin</gitHubRepo>
         <chartjs.version>4.2.1</chartjs.version>
-        <jenkins.version>2.361.4</jenkins.version>
-        <!-- those twoo should be aligned -->
-        <bom.version>2.361.x</bom.version> <!-- Pick up common dependencies for the selected LTS line: https://github.com/jenkinsci/bom#usage -->
+        <!-- https://www.jenkins.io/doc/developer/plugin-development/choosing-jenkins-baseline/ -->
+        <jenkins.baseline>2.361</jenkins.baseline>
+        <jenkins.version>${jenkins.baseline}.4</jenkins.version>
     </properties>
 
     <developers>
@@ -61,7 +61,7 @@
         <dependencies>
             <dependency>
                 <groupId>io.jenkins.tools.bom</groupId>
-                <artifactId>bom-${bom.version}</artifactId>
+                <artifactId>bom-${jenkins.baseline}.x</artifactId>
                 <!-- Pick up common dependencies for the selected LTS line: https://github.com/jenkinsci/bom#usage -->
                 <version>1887.vda_d0ddb_c15c4</version>
                 <scope>import</scope>
